# polybot-sdk-v2

./: .env  .env.example  Cargo.toml  LICENSE  README.md  ToDo.md
.github/workflows/: release.yml
ChatGPT-Rewrite/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
Claude-Rewrite/: Cargo.toml
Claude-Rewrite/src/: logger.rs  main.rs  messages.rs  state.rs
Claude-Rewrite/src/ui/: check_interval.rs  theme.rs  window_matrix.rs
polymarket-client-sdk-v2/: Cargo.toml
polymarket-client-sdk-v2/src/: auth.rs  lib.rs  serde_helpers.rs  types.rs
polymarket-client-sdk-v2/src/bridge/: client.rs
polymarket-client-sdk-v2/src/clob/: client.rs  mod.rs  order_builder.rs  utilities.rs
polymarket-client-sdk-v2/src/gamma/: client.rs  mod.rs
polymarket-client-sdk-v2/src/rtds/: mod.rs
src/: error.rs  logger.rs  main.rs  main.rs (02)  market_data.rs  messages.rs  state.rs  ui_types.rs  ui_types_rapid_sell_retry_model.rs  worker-rapid-sell-works.rs  worker.rs  worker_config.rs
src/bkp/: main.rs (01)  window_matrix_check_status_btn.rs  worker_rapid_sell_retry_model.rs
src/bridge/types/: request.rs  response.rs
src/clob/types/: mod.rs  response.rs
src/clob/ws/: interest.rs  subscription.rs
src/ctf/: client.rs  error.rs  mod.rs
src/data/: client.rs
src/data/types/: mod.rs  request.rs
src/gamma/types/: mod.rs  response.rs
src/rtds/: client.rs  error.rs  subscription.rs
src/rtds/types/: request.rs  (+1 more)
src/ui/: auth_gateway.rs  check_interval.rs  mod.rs  order_forms.rs  theme.rs  widgets.rs  window_matrix.rs
src/ws/: config.rs  connection.rs  error.rs  mod.rs  traits.rs
(+9 files in other folders)
