[package]
name = "polybot"
description = "Polymarket Trading Terminal"
version = "0.1.0"
authors = [
    "Jenson Paul <jensonpaul@cdk.cd>",
]
readme = "README.md"
repository = "https://github.com/jensonpaul/polybot-rs-clob-client-v2"
license = "MIT"
keywords = ["polymarket", "clob", "orderbook", "trading", "prediction-market"]
categories = [
    "api-bindings",
    "cryptography::cryptocurrencies",
    "finance",
    "web-programming::http-client",
]
edition = "2024"
rust-version = "1.88.0" # MSRV

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
polymarket_client_sdk_v2 = { 
	path = "./polymarket-client-sdk-v2", 
	version = "0.6.0-canary.1", 
	features = [
		"tracing",
		"heartbeats",
		"ws",
		"gamma",
		"clob"
	] 
}
anyhow = "1.0.102"
arc-swap = "1.9.1"
dotenv = "0.15.0"
eframe = "0.33.3"
egui = "0.33.3"
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
tokio = "1.50.0"
tracing = "0.1"
rust_decimal = { version = "1.41.0", features = ["serde"] }
rust_decimal_macros = "1.40.0"
futures = "0.3.32"
futures-util = "0.3.31"
serde = "1.0.228"
alloy = { version = "1.6.3", default-features = false, features = [
    "dyn-abi",
    "reqwest",
    "reqwest-rustls-tls",
    "serde",
    "signer-local",
    "signers",
    "sol-types"
] }